--- a/config.yml
+++ b/config.yml
@@ -2,12 +2,14 @@
 ---
 token: NjI4NjU3MDc3MDMxNjY1Njcz.Xj14_g.f80dk2n0j4zKNzW05GZWXqKBqq8
 ticketCategoryID: 608341490359599125
-prefix: !
+prefix: "!"
 ticketSupportRoleID: 609088404424097817
 hasTicketRoleID: 645081317393956866
-runner: Ticket
+runner: "Ticket"
 privateNotify: true
 notifyChannelID:
 notifyWithMention: true
-ticketEntry: Hallo <user> willkommen im support
+ticketEntry: "Hallo <user> willkommen im support"
 activationChannelID: 608341490359599126
+activity: "Testing"
+saveCategoryID: 676830128612835376
